# res-packager

./: CMakeLists.txt
sample/: RES.TXT  sample.c
src/: res.c  res.h
